pushing all works from lab a

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "files.associations": {
-        "declaring variables": "c"
+        "declaring variables": "c",
+        "using operators": "c"
     }
 }
